src/tr/fn/grammar/FunParser.java
// $ANTLR 3.1 /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g 2008-11-28 02:45:08

package tr.fn.grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class FunParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "APP", "ID", "DEFINE", "ENDEXPR", "HASH", "INT", "IF", "THEN", "ELSE", "LAMBDA", "RIGHTARROW", "LET", "IN", "LETREC", "LEFTPAREN", "RIGHTPAREN", "OR", "AND", "NOT", "PLUS", "MINUS", "STAR", "SLASH", "PERCENT", "LESS", "GREATER", "EQUAL", "GREATEREQUAL", "LESSEQUAL", "NOTEQUAL", "WS", "NL", "ML_COMMENT", "SL_COMMENT"
    };
    public static final int STAR=25;
    public static final int PERCENT=27;
    public static final int RIGHTARROW=14;
    public static final int ELSE=12;
    public static final int HASH=8;
    public static final int GREATEREQUAL=31;
    public static final int APP=4;
    public static final int INT=9;
    public static final int NOT=22;
    public static final int MINUS=24;
    public static final int AND=21;
    public static final int ID=5;
    public static final int DEFINE=6;
    public static final int EOF=-1;
    public static final int ENDEXPR=7;
    public static final int IF=10;
    public static final int NOTEQUAL=33;
    public static final int ML_COMMENT=36;
    public static final int LEFTPAREN=18;
    public static final int LETREC=17;
    public static final int WS=34;
    public static final int GREATER=29;
    public static final int SLASH=26;
    public static final int THEN=11;
    public static final int IN=16;
    public static final int RIGHTPAREN=19;
    public static final int EQUAL=30;
    public static final int SL_COMMENT=37;
    public static final int OR=20;
    public static final int LESS=28;
    public static final int PLUS=23;
    public static final int NL=35;
    public static final int LAMBDA=13;
    public static final int LESSEQUAL=32;
    public static final int LET=15;

    // delegates
    // delegators


        public FunParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public FunParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return FunParser.tokenNames; }
    public String getGrammarFileName() { return "/home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g"; }


    public static class program_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:27:1: program : ( decl )* EOF ;
    public final FunParser.program_return program() throws RecognitionException {
        FunParser.program_return retval = new FunParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        FunParser.decl_return decl1 = null;


        Object EOF2_tree=null;

        try {
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:27:12: ( ( decl )* EOF )
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:27:14: ( decl )* EOF
            {
            root_0 = (Object)adaptor.nil();

            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:27:14: ( decl )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==ID) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:27:14: decl
            	    {
            	    pushFollow(FOLLOW_decl_in_program70);
            	    decl1=decl();

            	    state._fsp--;

            	    adaptor.addChild(root_0, decl1.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_program73); 
            EOF2_tree = (Object)adaptor.create(EOF2);
            adaptor.addChild(root_0, EOF2_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class decl_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "decl"
    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:29:1: decl : fname ( ID )* DEFINE expr ENDEXPR -> ^( DEFINE fname expr ( ID )* ) ;
    public final FunParser.decl_return decl() throws RecognitionException {
        FunParser.decl_return retval = new FunParser.decl_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID4=null;
        Token DEFINE5=null;
        Token ENDEXPR7=null;
        FunParser.fname_return fname3 = null;

        FunParser.expr_return expr6 = null;


        Object ID4_tree=null;
        Object DEFINE5_tree=null;
        Object ENDEXPR7_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_DEFINE=new RewriteRuleTokenStream(adaptor,"token DEFINE");
        RewriteRuleTokenStream stream_ENDEXPR=new RewriteRuleTokenStream(adaptor,"token ENDEXPR");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_fname=new RewriteRuleSubtreeStream(adaptor,"rule fname");
        try {
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:29:12: ( fname ( ID )* DEFINE expr ENDEXPR -> ^( DEFINE fname expr ( ID )* ) )
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:29:14: fname ( ID )* DEFINE expr ENDEXPR
            {
            pushFollow(FOLLOW_fname_in_decl87);
            fname3=fname();

            state._fsp--;

            stream_fname.add(fname3.getTree());
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:29:20: ( ID )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==ID) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:29:20: ID
            	    {
            	    ID4=(Token)match(input,ID,FOLLOW_ID_in_decl89);  
            	    stream_ID.add(ID4);


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            DEFINE5=(Token)match(input,DEFINE,FOLLOW_DEFINE_in_decl92);  
            stream_DEFINE.add(DEFINE5);

            pushFollow(FOLLOW_expr_in_decl94);
            expr6=expr();

            state._fsp--;

            stream_expr.add(expr6.getTree());
            ENDEXPR7=(Token)match(input,ENDEXPR,FOLLOW_ENDEXPR_in_decl96);  
            stream_ENDEXPR.add(ENDEXPR7);



            // AST REWRITE
            // elements: DEFINE, ID, fname, expr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 29:44: -> ^( DEFINE fname expr ( ID )* )
            {
                // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:29:47: ^( DEFINE fname expr ( ID )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(stream_DEFINE.nextNode(), root_1);

                adaptor.addChild(root_1, stream_fname.nextTree());
                adaptor.addChild(root_1, stream_expr.nextTree());
                // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:29:67: ( ID )*
                while ( stream_ID.hasNext() ) {
                    adaptor.addChild(root_1, stream_ID.nextNode());

                }
                stream_ID.reset();

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;
            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "decl"

    public static class fname_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "fname"
    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:31:1: fname : ID ;
    public final FunParser.fname_return fname() throws RecognitionException {
        FunParser.fname_return retval = new FunParser.fname_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token ID8=null;

        Object ID8_tree=null;

        try {
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:31:12: ( ID )
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:31:14: ID
            {
            root_0 = (Object)adaptor.nil();

            ID8=(Token)match(input,ID,FOLLOW_ID_in_fname123); 
            ID8_tree = (Object)adaptor.create(ID8);
            adaptor.addChild(root_0, ID8_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "fname"

    public static class expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr"
    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:33:1: expr : single ( expr )? ;
    public final FunParser.expr_return expr() throws RecognitionException {
        FunParser.expr_return retval = new FunParser.expr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        FunParser.single_return single9 = null;

        FunParser.expr_return expr10 = null;



        try {
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:33:12: ( single ( expr )? )
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:33:14: single ( expr )?
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_single_in_expr138);
            single9=single();

            state._fsp--;

            adaptor.addChild(root_0, single9.getTree());
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:33:21: ( expr )?
            int alt3=2;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:33:21: expr
                    {
                    pushFollow(FOLLOW_expr_in_expr140);
                    expr10=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr10.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr"

    public static class single_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "single"
    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:35:1: single : ( HASH INT expr | IF or THEN expr ELSE expr -> ^( IF or expr expr ) | LAMBDA ( ID )* RIGHTARROW expr -> ^( LAMBDA expr ( ID )* ) | LET ( decl )+ IN expr -> ^( LET expr ( decl )+ ) | LETREC ( decl )+ IN expr -> ^( LETREC expr ( decl )+ ) | LEFTPAREN expr RIGHTPAREN -> ^( expr ) | or );
    public final FunParser.single_return single() throws RecognitionException {
        FunParser.single_return retval = new FunParser.single_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token HASH11=null;
        Token INT12=null;
        Token IF14=null;
        Token THEN16=null;
        Token ELSE18=null;
        Token LAMBDA20=null;
        Token ID21=null;
        Token RIGHTARROW22=null;
        Token LET24=null;
        Token IN26=null;
        Token LETREC28=null;
        Token IN30=null;
        Token LEFTPAREN32=null;
        Token RIGHTPAREN34=null;
        FunParser.expr_return expr13 = null;

        FunParser.or_return or15 = null;

        FunParser.expr_return expr17 = null;

        FunParser.expr_return expr19 = null;

        FunParser.expr_return expr23 = null;

        FunParser.decl_return decl25 = null;

        FunParser.expr_return expr27 = null;

        FunParser.decl_return decl29 = null;

        FunParser.expr_return expr31 = null;

        FunParser.expr_return expr33 = null;

        FunParser.or_return or35 = null;


        Object HASH11_tree=null;
        Object INT12_tree=null;
        Object IF14_tree=null;
        Object THEN16_tree=null;
        Object ELSE18_tree=null;
        Object LAMBDA20_tree=null;
        Object ID21_tree=null;
        Object RIGHTARROW22_tree=null;
        Object LET24_tree=null;
        Object IN26_tree=null;
        Object LETREC28_tree=null;
        Object IN30_tree=null;
        Object LEFTPAREN32_tree=null;
        Object RIGHTPAREN34_tree=null;
        RewriteRuleTokenStream stream_LEFTPAREN=new RewriteRuleTokenStream(adaptor,"token LEFTPAREN");
        RewriteRuleTokenStream stream_LETREC=new RewriteRuleTokenStream(adaptor,"token LETREC");
        RewriteRuleTokenStream stream_IN=new RewriteRuleTokenStream(adaptor,"token IN");
        RewriteRuleTokenStream stream_THEN=new RewriteRuleTokenStream(adaptor,"token THEN");
        RewriteRuleTokenStream stream_LAMBDA=new RewriteRuleTokenStream(adaptor,"token LAMBDA");
        RewriteRuleTokenStream stream_RIGHTPAREN=new RewriteRuleTokenStream(adaptor,"token RIGHTPAREN");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_LET=new RewriteRuleTokenStream(adaptor,"token LET");
        RewriteRuleTokenStream stream_RIGHTARROW=new RewriteRuleTokenStream(adaptor,"token RIGHTARROW");
        RewriteRuleTokenStream stream_IF=new RewriteRuleTokenStream(adaptor,"token IF");
        RewriteRuleTokenStream stream_ELSE=new RewriteRuleTokenStream(adaptor,"token ELSE");
        RewriteRuleSubtreeStream stream_or=new RewriteRuleSubtreeStream(adaptor,"rule or");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");
        try {
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:35:12: ( HASH INT expr | IF or THEN expr ELSE expr -> ^( IF or expr expr ) | LAMBDA ( ID )* RIGHTARROW expr -> ^( LAMBDA expr ( ID )* ) | LET ( decl )+ IN expr -> ^( LET expr ( decl )+ ) | LETREC ( decl )+ IN expr -> ^( LETREC expr ( decl )+ ) | LEFTPAREN expr RIGHTPAREN -> ^( expr ) | or )
            int alt7=7;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:35:14: HASH INT expr
                    {
                    root_0 = (Object)adaptor.nil();

                    HASH11=(Token)match(input,HASH,FOLLOW_HASH_in_single165); 
                    HASH11_tree = (Object)adaptor.create(HASH11);
                    adaptor.addChild(root_0, HASH11_tree);

                    INT12=(Token)match(input,INT,FOLLOW_INT_in_single167); 
                    INT12_tree = (Object)adaptor.create(INT12);
                    adaptor.addChild(root_0, INT12_tree);

                    pushFollow(FOLLOW_expr_in_single169);
                    expr13=expr();

                    state._fsp--;

                    adaptor.addChild(root_0, expr13.getTree());

                    }
                    break;
                case 2 :
                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:36:14: IF or THEN expr ELSE expr
                    {
                    IF14=(Token)match(input,IF,FOLLOW_IF_in_single184);  
                    stream_IF.add(IF14);

                    pushFollow(FOLLOW_or_in_single186);
                    or15=or();

                    state._fsp--;

                    stream_or.add(or15.getTree());
                    THEN16=(Token)match(input,THEN,FOLLOW_THEN_in_single188);  
                    stream_THEN.add(THEN16);

                    pushFollow(FOLLOW_expr_in_single190);
                    expr17=expr();

                    state._fsp--;

                    stream_expr.add(expr17.getTree());
                    ELSE18=(Token)match(input,ELSE,FOLLOW_ELSE_in_single192);  
                    stream_ELSE.add(ELSE18);

                    pushFollow(FOLLOW_expr_in_single194);
                    expr19=expr();

                    state._fsp--;

                    stream_expr.add(expr19.getTree());


                    // AST REWRITE
                    // elements: IF, expr, or, expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 36:42: -> ^( IF or expr expr )
                    {
                        // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:36:45: ^( IF or expr expr )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_IF.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_or.nextTree());
                        adaptor.addChild(root_1, stream_expr.nextTree());
                        adaptor.addChild(root_1, stream_expr.nextTree());

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 3 :
                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:37:14: LAMBDA ( ID )* RIGHTARROW expr
                    {
                    LAMBDA20=(Token)match(input,LAMBDA,FOLLOW_LAMBDA_in_single223);  
                    stream_LAMBDA.add(LAMBDA20);

                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:37:21: ( ID )*
                    loop4:
                    do {
                        int alt4=2;
                        int LA4_0 = input.LA(1);

                        if ( (LA4_0==ID) ) {
                            alt4=1;
                        }


                        switch (alt4) {
                    	case 1 :
                    	    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:37:21: ID
                    	    {
                    	    ID21=(Token)match(input,ID,FOLLOW_ID_in_single225);  
                    	    stream_ID.add(ID21);


                    	    }
                    	    break;

                    	default :
                    	    break loop4;
                        }
                    } while (true);

                    RIGHTARROW22=(Token)match(input,RIGHTARROW,FOLLOW_RIGHTARROW_in_single228);  
                    stream_RIGHTARROW.add(RIGHTARROW22);

                    pushFollow(FOLLOW_expr_in_single230);
                    expr23=expr();

                    state._fsp--;

                    stream_expr.add(expr23.getTree());


                    // AST REWRITE
                    // elements: ID, LAMBDA, expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 37:42: -> ^( LAMBDA expr ( ID )* )
                    {
                        // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:37:45: ^( LAMBDA expr ( ID )* )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_LAMBDA.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_expr.nextTree());
                        // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:37:59: ( ID )*
                        while ( stream_ID.hasNext() ) {
                            adaptor.addChild(root_1, stream_ID.nextNode());

                        }
                        stream_ID.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 4 :
                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:38:14: LET ( decl )+ IN expr
                    {
                    LET24=(Token)match(input,LET,FOLLOW_LET_in_single257);  
                    stream_LET.add(LET24);

                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:38:18: ( decl )+
                    int cnt5=0;
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==ID) ) {
                            alt5=1;
                        }


                        switch (alt5) {
                    	case 1 :
                    	    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:38:18: decl
                    	    {
                    	    pushFollow(FOLLOW_decl_in_single259);
                    	    decl25=decl();

                    	    state._fsp--;

                    	    stream_decl.add(decl25.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt5 >= 1 ) break loop5;
                                EarlyExitException eee =
                                    new EarlyExitException(5, input);
                                throw eee;
                        }
                        cnt5++;
                    } while (true);

                    IN26=(Token)match(input,IN,FOLLOW_IN_in_single262);  
                    stream_IN.add(IN26);

                    pushFollow(FOLLOW_expr_in_single264);
                    expr27=expr();

                    state._fsp--;

                    stream_expr.add(expr27.getTree());


                    // AST REWRITE
                    // elements: expr, decl, LET
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 38:42: -> ^( LET expr ( decl )+ )
                    {
                        // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:38:45: ^( LET expr ( decl )+ )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_LET.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_expr.nextTree());
                        if ( !(stream_decl.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_decl.hasNext() ) {
                            adaptor.addChild(root_1, stream_decl.nextTree());

                        }
                        stream_decl.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 5 :
                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:39:14: LETREC ( decl )+ IN expr
                    {
                    LETREC28=(Token)match(input,LETREC,FOLLOW_LETREC_in_single300);  
                    stream_LETREC.add(LETREC28);

                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:39:21: ( decl )+
                    int cnt6=0;
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==ID) ) {
                            alt6=1;
                        }


                        switch (alt6) {
                    	case 1 :
                    	    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:39:21: decl
                    	    {
                    	    pushFollow(FOLLOW_decl_in_single302);
                    	    decl29=decl();

                    	    state._fsp--;

                    	    stream_decl.add(decl29.getTree());

                    	    }
                    	    break;

                    	default :
                    	    if ( cnt6 >= 1 ) break loop6;
                                EarlyExitException eee =
                                    new EarlyExitException(6, input);
                                throw eee;
                        }
                        cnt6++;
                    } while (true);

                    IN30=(Token)match(input,IN,FOLLOW_IN_in_single305);  
                    stream_IN.add(IN30);

                    pushFollow(FOLLOW_expr_in_single307);
                    expr31=expr();

                    state._fsp--;

                    stream_expr.add(expr31.getTree());


                    // AST REWRITE
                    // elements: decl, LETREC, expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 39:42: -> ^( LETREC expr ( decl )+ )
                    {
                        // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:39:45: ^( LETREC expr ( decl )+ )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_LETREC.nextNode(), root_1);

                        adaptor.addChild(root_1, stream_expr.nextTree());
                        if ( !(stream_decl.hasNext()) ) {
                            throw new RewriteEarlyExitException();
                        }
                        while ( stream_decl.hasNext() ) {
                            adaptor.addChild(root_1, stream_decl.nextTree());

                        }
                        stream_decl.reset();

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 6 :
                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:40:14: LEFTPAREN expr RIGHTPAREN
                    {
                    LEFTPAREN32=(Token)match(input,LEFTPAREN,FOLLOW_LEFTPAREN_in_single340);  
                    stream_LEFTPAREN.add(LEFTPAREN32);

                    pushFollow(FOLLOW_expr_in_single342);
                    expr33=expr();

                    state._fsp--;

                    stream_expr.add(expr33.getTree());
                    RIGHTPAREN34=(Token)match(input,RIGHTPAREN,FOLLOW_RIGHTPAREN_in_single344);  
                    stream_RIGHTPAREN.add(RIGHTPAREN34);



                    // AST REWRITE
                    // elements: expr
                    // token labels: 
                    // rule labels: retval
                    // token list labels: 
                    // rule list labels: 
                    retval.tree = root_0;
                    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

                    root_0 = (Object)adaptor.nil();
                    // 40:42: -> ^( expr )
                    {
                        // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:40:45: ^( expr )
                        {
                        Object root_1 = (Object)adaptor.nil();
                        root_1 = (Object)adaptor.becomeRoot(stream_expr.nextNode(), root_1);

                        adaptor.addChild(root_0, root_1);
                        }

                    }

                    retval.tree = root_0;
                    }
                    break;
                case 7 :
                    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:41:14: or
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_or_in_single367);
                    or35=or();

                    state._fsp--;

                    adaptor.addChild(root_0, or35.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "single"

    public static class fapp_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "fapp"
    // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:43:1: fapp : fname ( farg )+ -> ^( APP fname ( farg )+ ) ;
    public final FunParser.fapp_return fapp() throws RecognitionException {
        FunParser.fapp_return retval = new FunParser.fapp_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        FunParser.fname_return fname36 = null;

        FunParser.farg_return farg37 = null;


        RewriteRuleSubtreeStream stream_farg=new RewriteRuleSubtreeStream(adaptor,"rule farg");
        RewriteRuleSubtreeStream stream_fname=new RewriteRuleSubtreeStream(adaptor,"rule fname");
        try {
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:43:12: ( fname ( farg )+ -> ^( APP fname ( farg )+ ) )
            // /home/raivo/workspace/tr-fn/src/tr/fn/grammar/Fun.g:43:14: fname ( farg )+
            {
            pushFollow(FOLLOW_fname_in_fapp382);
            fname36=fname();

            state._fsp--;
